# Sentiment-Analysis

./: CMakeLists.txt  README  common_headers.hpp  data.py  main.cpp  parallel_encoder.cpp  parallel_encoder.hpp  parallel_processor  plot_results.py  preprocessor.cpp  preprocessor.hpp  sentiment_ann.py  sequential.hpp  sequential_main.cpp  sequential_processor  sequential_processor.cpp  sequential_processor.hpp
